2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/include/nvram.h: Fix typo.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/clock/clock.c: Remove unnecessary includes of
	rtems/libcsupport.h and rtems/libio.h.

2008-09-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/startup/bspstart.c, shared/startup/pretaskinghook.c: Add use
	of bsp_get_work_area() in its own file and rely on BSP Framework to
	perform more initialization.
	* shared/startup/bspgetworkarea.c: New file.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/startup/bspstart.c: Review of all bsp_cleanup()
	implementations. In this phase, all prototypes were removed from
	bsp.h and empty implementations were removed and made to use the
	shared stub.

2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* acinclude.m4: Add tqm8xx.

2008-09-08	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* tqm8xx: New BSP.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/irq/irq.c: Convert to "bool".

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/clock/clock.c: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/console/inch.c: Convert to "bool".

2008-08-28	Till Straumann <strauman@slac.stanford.edu>

	* shared/vme/vme_universe.c: added implementation for
	BSP_VMEResetBus().

2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/flash/flash.c, shared/irq/irq_init.c: Add missing
	prototypes.
	* shared/showbats.c, shared/console/inch.c, shared/irq/irq_init.c,
	shared/pci/detect_raven_bridge.c, shared/startup/bspstart.c,
	shared/startup/zerobss.c, shared/vme/vmeconfig.c,
	startup/exit.c: Add missing prototypes.
